fix:alignment issue of left navbar

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/navigation2.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/navigation2.less
@@ -8,6 +8,7 @@
     .cmp-navigation {
       overflow: auto;
       padding-inline: 1.25rem;
+      margin-left: 0.625rem;
 
       &-filter__wrapper {
         padding-inline: 1.25rem;
